--- a/index.html
+++ b/index.html
@@ -1,17 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Final Module One</title>
     <!-- css -->
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<h1>hello</h1>
+    <!-- nav s -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand animate__animated animate__rubberBand" href="#"><img src="images/SiteLogo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                    <li class="nav-item ms-3">
+                        <a class="nav-link active me-3" aria-current="page" href="#">About</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link" href="#">Gallery</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link" href="#">Team</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <button class="button-1 ps-3 pe-3" type="submit">Contact Us</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <!-- nav e -->
+
+    <!-- 1 -->
+    <section class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 col-md-6 col-sm-12">
+                    <div class="text pt-4">
+                        <h1 class="head1">
+                            Launch your own online learning platform
+                            <br>
+                            <span class="free">for FREE</span>
+                        </h1>
+                    </div>
+                    <div class="text2">
+                        <p>Top teacher from around the world teach thousands of students. Get unlimited access to 1000+
+                            courses</p>
+                    </div>
+                    <div class="button2 ">
+                        <button class="btn-2 ps-3 pt-1 pb-1 pe-3">
+                            Get Started
+                        </button>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 col-md-6 col-sm-12 bg-color">
+                    <img src="images/PixelBook Go.png" alt="" class="w-100 mt-4 animate__animated animate__backInRight ">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
