--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="nav-item me-3">
                         <a class="nav-link" href="#">Gallery</a>
                     </li>
-                    <li class="nav-item me-3">
+                    <li class="nav-item me-5">
                         <a class="nav-link" href="#">Team</a>
                     </li>
                 </ul>
@@ -66,7 +66,7 @@
                         <p>Top teacher from around the world teach thousands of students. Get unlimited access to 1000+
                             courses</p>
                     </div>
-                    <div class="button2 ">
+                    <div class="button2 mt-3">
                         <button class="btn-2 ps-3 pt-1 pb-1 pe-3">
                             Get Started
                         </button>
