--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                             courses</p>
                     </div>
                     <div class="button2 mt-3">
-                        <button class="btn-2 ps-3 pt-1 pb-1 pe-3">
+                        <button class="btn-2 ps-3 pt-1 pb-1 pe-3 rounded">
                             Get Started
                         </button>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 col-md-6 col-sm-12 bg-color">
-                    <img src="images/PixelBook Go.png" alt="" class="w-100 mt-4 animate__animated animate__backInRight ">
+                    <img src="images/PixelBook Go.png" alt="" class="w-100 mt-4 animate__animated animate__backInRight my-img ">
                 </div>
             </div>
         </div>
